# py-dev

./: README.md  pyproject.toml  t11_lc_sequentialchain_weather.py  t1_torch.py  t2_lc_translator.py  t3_lc_multi_translator.py  t4_lc_scenario.py  t6_lc_example_selector.py
explainable_ai/: e0_data.py  e1_data_exploration.py  e2_interpret.py  e3_lime.ipynb  e4_treeshape.ipynb
langchain/: t10_sequentialchain.py  t12_sequentialchain_month.py  t13_multipromptchain.py  t14_conditional_chain.py  t15_runnablesequence.py  t16_runnableparallel_customer.py  t17_runnableparallel_translator.py  t18_runnablebranch.py  t19_runnablelamda.py  t20_runnablewithfallbacks.py  t21_runnablepassthrough.py  t22_runnablepassthrough_assign.py  t24_gemini_hello.py  t25_gemini_photo.py  t26_gemini_audio.py  t27_gemini_video.py  t28_rag.py  t2_translator.py  t5_fewshot.py  t7_fewshot2.py  t8_llmchain.py  t9_simplesequentialchain.py
machinelearning/: m1_rfc_xgb.py  m2_optuna_xgb.py
