[project]
name = "py-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "proxves7",email = "proxves7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "django (>=4.2.9,<5.0.0)",
    "torch (==2.7)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

