[project]
name = "py-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "langchain==0.3.14",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.14",
    "langchain-google-genai==2.0.8",
    "langchain-ollama==0.2.3",
    "langgraph==0.2.62",
    "langgraph-checkpoint==2.0.10",
    "langgraph-checkpoint-sqlite==2.0.2",
    "matplotlib>=3.10.5",
    "pypdf==5.7.0",
    "torch>=2.8.0",
]
