[project]
name = "py-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cleanlab>=2.6.5",
    "imblearn>=0.0",
    "interpret>=0.7.2",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.7",
    "langchain==0.3.14",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.14",
    "langchain-google-genai==2.0.8",
    "langchain-ollama==0.2.3",
    "langchain-qdrant>=0.2.0",
    "langgraph==0.2.62",
    "langgraph-checkpoint==2.0.10",
    "langgraph-checkpoint-sqlite==2.0.2",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pypdf==5.7.0",
    "qdrant-client>=1.15.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "shap>=0.48.0",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "xgboost>=3.0.5",
]
